#shift-58744 - fix assets in all places.

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -587,7 +587,7 @@ a.notification-link {
   width: 30px;
   height: 30px;
   float: left;
-  background: url('/assets/chat_avatar.png');
+  background: url('/chat_avatar.png');
   border: 1px solid lightgray;
 }
 
